test/arrays/reshape/new-edition/reshapeSizeMismatch.good
reshapeSizeMismatch.chpl:3: error: halt reached - Size mismatch: Can't rehape a 4-element array into a 1-element array
