test/arrays/reshape/new-edition/reshapeSizeMismatch.chpl
config const n = 1;
var A = [1, 2, 3, 4];
ref B = reshape(A, {1..n, 1..n});

